--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -26,7 +26,7 @@
     <nav
         class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3 navbar-transparent mt-4">
         <div class="container">
-            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="../pages/dashboard.html">
+            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="/">
                 Royal BarberShop
             </a>
             <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse"
@@ -41,8 +41,7 @@
             <div class="collapse navbar-collapse" id="navigation">
                 <ul class="navbar-nav mx-auto ms-xl-auto me-xl-7">
                     <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center me-2 active" aria-current="page"
-                            href="../pages/dashboard.html">
+                        <a class="nav-link d-flex align-items-center me-2 active" aria-current="page" href="/">
                             <i class="fa fa-chart-pie opacity-6  me-1"></i>
                             Dashboard
                         </a>
