--- a/views/booking/index.ejs
+++ b/views/booking/index.ejs
@@ -115,6 +115,9 @@
                                         <th
                                             class="text-uppercase text-secondary text-sm font-weight-bolder opacity-7 ps-2">
                                             Nama Pelanggan</th>
+                                        <th
+                                            class="text-uppercase text-secondary text-sm font-weight-bolder opacity-7 ps-2">
+                                            No Telp</th>
                                         <th class="text-uppercase text-secondary text-sm font-weight-bolder opacity-7">
                                             Kapster</th>
                                         <th class="text-uppercase text-secondary text-sm font-weight-bolder opacity-7">
@@ -134,6 +137,9 @@
                                         </td>
                                         <td>
                                             <p class="text-xs font-weight-bold mb-0"><%= element.nama %></p>
+                                        </td>
+                                        <td>
+                                            <p class="text-xs font-weight-bold mb-0"><%= element.no_telp %></p>
                                         </td>
                                         <td class="align-middle text-xs">
                                             <p class="text-xs font-weight-bold mb-0"><%= element.kapster %></p>
