add log, laporan bulanan

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -123,6 +123,11 @@
                                             up</a>
                                     </p>
                                 </div>
+                                <div class="card-footer text-center pt-0 px-lg-2 px-1">
+                                    <p class="mb-4 text-sm mx-auto">
+                                        Jumlah Pengunjung Hari <%= pengunjung %>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6">
