--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -29,6 +29,15 @@
             margin-top: 50px;
         }
 
+        #notif {
+            position: absolute;
+            top: 50px;
+            right: 50%;
+            width: 50%;
+            z-index: 99;
+            margin-top: 50px;
+        }
+
         .img {
             width: 370px;
             /* You can set the dimensions to whatever you want */
