--- a/views/model-rambut/index.ejs
+++ b/views/model-rambut/index.ejs
@@ -61,8 +61,12 @@
                     <div class="card-header pb-0 p-3 d-flex justify-content-between">
                         <h6 class="mb-1">Model
                             Rambut</h6>
-                        <a href="/model-rambut/add" class="btn btn-info btn-sm font-weight-bold text-xs mr-2"
-                            id="button-update">Tambah</a>
+                        <div>
+                            <a href="/model-rambut/print" class="btn btn-secondary btn-sm font-weight-bold text-xs mr-2"
+                                id="button-update">Download</a>
+                            <a href="/model-rambut/add" class="btn btn-info btn-sm font-weight-bold text-xs mr-2"
+                                id="button-update">Tambah</a>
+                        </div>
                     </div>
                     <div class="card-body p-3">
                         <div class="row">
