--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -58,8 +58,12 @@
                 <div class="card mb-4">
                     <div class="card-header pb-0 text-uppercase d-flex justify-content-between">
                         <h6><%= page_name %> table</h6>
-                        <a href="/users/add" class="btn btn-info btn-sm font-weight-bold text-xs mr-2"
-                            id="button-update">Tambah</a>
+                        <div>
+                            <a href="/users/print" class="btn btn-secondary btn-sm font-weight-bold text-xs mr-2"
+                                id="button-update">Download</a>
+                            <a href="/users/add" class="btn btn-info btn-sm font-weight-bold text-xs mr-2"
+                                id="button-update">Tambah</a>
+                        </div>
                     </div>
                     <div class="card-body px-0 pt-0 pb-2">
                         <div class="table-responsive p-0">
