--- a/views/model-rambut/report-model-rambut.ejs
+++ b/views/model-rambut/report-model-rambut.ejs
@@ -59,8 +59,8 @@
                     <h6><%= index+1 %> </h6>
                 </td>
                 <td>
-                    <img src="http://127.0.0.1:3000/images/images/<%= element.foto %>" alt="<%= element.foto %>"
-                        width="150px" height="150px">
+                    <img src="http://127.0.0.1:3000/images/<%= element.foto %>" alt="<%= element.foto %>" width="150px"
+                        height="150px">
                 </td>
                 <td>
                     <p><%= element.nama %></p>
